--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,4 @@
 @import './utils/variables.scss';
 @import './base/base.scss';
+@import './Components/header.scss';
+@import './Components/footer.scss';
