--- a/sass/Components/footer.scss
+++ b/sass/Components/footer.scss
@@ -10,10 +10,12 @@
         padding: 1rem;   
         .footer_titre
         {
-            font-family: shrikhand, cursive;
-            font-size: larger;
-            margin-top: 0px;
-        }
+            filter: invert(100%);
+            width: 105px;
+            height: 15px;
+            padding: 2rem 0 1.5rem 0;
+            margin: 0 0 0 -10px;
+        }        
         .footer_text
         {
             margin: .5rem 0; 
