--- a/sass/Components/header.scss
+++ b/sass/Components/header.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     box-shadow: 0px 5px 5px lightgrey;
     margin-bottom: 5px;
+    width: 100%;
     .logo-haut
     {
         margin-top: 19px;
@@ -11,6 +12,8 @@
     }
     .logo-retour
     {
-        justify-content: center;
+        position: absolute;
+        top: 1.5rem;
+        left: 1rem;
     }
 }
