--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,3 +2,4 @@
 @import './base/base.scss';
 @import './Components/header.scss';
 @import './Components/footer.scss';
+@import './Components/main.scss';
