--- a/sass/Components/footer.scss
+++ b/sass/Components/footer.scss
@@ -1,6 +1,6 @@
 .footer
 {
-    background-color: #353535;
+    background-color:$color__footer;
     color: white;
     padding: 10px;
     .footer_container
