--- a/sass/Components/main.scss
+++ b/sass/Components/main.scss
@@ -15,3 +15,68 @@
             font-size: 1.2rem;
         }
 }
+h3
+{
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.reservation
+{
+    width: 100%;
+    text-align: center;
+    background-color: #f6f6f6;
+    padding: 1px 1px 24px 1px;
+
+}
+.btn
+{
+    border-radius: 2rem;
+    border: 0;
+    color: white;
+    padding: 1rem;
+    background-image:  radial-gradient(ellipse farthest-corner at 20px 0, #FF79DA 0%, #9356DC 100%);
+
+}
+.fonction
+{
+    width: 100%;
+    .fonction__titre
+    {
+        text-align: start;
+        padding: 3.5rem 0 2rem 0;
+        grid-column-start: 2;
+    }
+    .fonction__step
+    {
+        display: flex;
+        align-items: center;
+        border-radius: 1.5rem;
+        background-color: #f6f6f6;
+        margin: 0 0 25px 0;
+        padding: 1.8rem 0 1.3rem 0;
+        width: 100%;
+    }
+    .fonction__step__number
+    {
+        color: #fff;
+        background-color: #9356dc;
+        border: 1px solid #9356dc;
+        border-radius: 50%;
+        padding: 4px 8px 4px 8px;
+        margin: 0 1.5rem 0 14px;  
+    }
+    .fonction__step__icone
+    {
+        grid-column-start: 2;
+        font-size: 20px;
+        color: #7e7e7e;
+    }
+    .fonction__step__titre
+    {
+        grid-column-start: 2;
+        margin-left: 2rem;
+        font-size: 1rem;
+        font-weight: bold;
+    }
+}
