--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+/* partie footer*/
+/* font base*/
+/* Element Main*/
 body {
   margin: 0;
   font-family: Roboto, sans-serif;
@@ -119,6 +122,83 @@ h3 {
   margin-left: 2rem;
   font-size: 1rem;
   font-weight: bold;
+}
+
+.restaurant {
+  display: grid;
+  background: #f6f6f6;
+}
+.restaurant .restaurant__menu {
+  position: relative;
+  background-color: #fff;
+  width: 100%;
+  height: 250px;
+  border-radius: 1.5rem;
+  -webkit-box-shadow: 3px 8px 8px #dedada;
+  box-shadow: 3px 8px 8px #dedada;
+  margin: 0 0 3rem 0;
+}
+.restaurant .restaurant__img {
+  border-radius: 1.5rem 1.5rem 0 0;
+  width: 100%;
+  height: 175px;
+  -o-object-fit: cover;
+  object-fit: cover;
+  grid-column-start: 2;
+}
+.restaurant .restaurant__news {
+  border-radius: 3px;
+  background-color: #99e2d0;
+  color: #217460;
+  padding: 5px;
+  position: absolute;
+  top: 12px;
+  right: 10px;
+}
+
+.imageHaute {
+  grid-column-start: 2;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.sectionMenu {
+  background-color: #f6f6f6;
+}
+
+.titre__restaurant {
+  position: relative;
+  border-radius: 1.5rem 1.5rem 0 0;
+  padding: 2.4rem 0 0 1.5rem;
+  margin-top: -2rem;
+}
+
+.menu {
+  grid-column-start: 2;
+}
+.menu .menu__titre {
+  padding: 3rem 0 0.5rem;
+  font-size: 1rem;
+}
+.menu .menu__ligneTitre {
+  width: 2.5rem;
+  border-top: 3px solid #99e2d0;
+  margin: 0.5rem 0 0 0;
+}
+.menu .menu__descision {
+  position: relative;
+  background-color: #fff;
+  height: 70px;
+  padding: 0 0 15px 0;
+  margin: 1rem 0 12px 0;
+  cursor: pointer;
+  overflow: hidden;
+  align-items: center;
+  width: 100%;
+  border-radius: 1.5rem;
+  box-shadow: 3px 3px 10px #dedada;
+  grid-column-start: 2;
 }
 
 /*# sourceMappingURL=style.css.map */
