--- a/sass/Components/main.scss
+++ b/sass/Components/main.scss
@@ -80,3 +80,38 @@ h3
         font-weight: bold;
     }
 }
+.restaurant
+{
+    display: grid;
+    background: #f6f6f6;
+    .restaurant__menu
+    {
+        position: relative;
+        background-color: #fff;
+        width: 100%;
+        height: 250px;
+        border-radius: 1.5rem;
+        -webkit-box-shadow: 3px 8px 8px #dedada;
+        box-shadow: 3px 8px 8px #dedada;
+        margin: 0 0 3rem 0;
+    }
+    .restaurant__img
+    {
+        border-radius: 1.5rem 1.5rem 0 0;
+        width: 100%;
+        height: 175px;
+        -o-object-fit: cover;
+        object-fit: cover;
+        grid-column-start: 2;
+    }
+    .restaurant__news
+    {
+        border-radius: 3px;
+        background-color: #99e2d0;
+        color: #217460;
+        padding: 5px;
+        position: absolute;
+        top: 12px;
+        right: 10px; 
+    }
+}
