--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,4 @@
 @import './Components/header.scss';
 @import './Components/footer.scss';
 @import './Components/main.scss';
+@import './Components/mainmenu.scss';
