travail sur body les pages d'accueil et de menu HTML et CSS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,6 +128,9 @@ h3 {
   display: grid;
   background: #f6f6f6;
 }
+.restaurant .restaurant__bloc {
+  margin: 0 20px 0 20px;
+}
 .restaurant .restaurant__menu {
   position: relative;
   background-color: #fff;
@@ -154,6 +157,31 @@ h3 {
   position: absolute;
   top: 12px;
   right: 10px;
+}
+.restaurant .restaurant__titre {
+  margin-top: -20px;
+}
+.restaurant .restaurant__titre .restaurant__grosTitre {
+  margin-left: 13px;
+}
+.restaurant .restaurant__titre .restaurant__localisation {
+  margin-top: -19px;
+  margin-left: 13px;
+}
+.restaurant .restaurant__blocHeart {
+  margin-top: -56px;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 22px;
+}
+.restaurant .restaurant__blocHeart .restaurant__heartWhite {
+  padding-left: 13px;
+  font-size: 27px;
+}
+.restaurant .restaurant__blocHeart .restaurant__heartRose {
+  margin-left: -19px;
+  color: transparent;
+  font-size: 27px;
 }
 
 .imageHaute {
