--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,11 +32,13 @@ a {
   background-color: #353535;
   color: white;
   padding: 10px;
+  margin-top: -10px;
 }
 .footer .footer_container {
   display: flex;
   flex-direction: column;
   padding: 1rem;
+  margin-top: -25px;
 }
 .footer .footer_container .footer_titre {
   filter: invert(100%);
@@ -79,20 +81,22 @@ h3 {
   padding: 1px 1px 24px 1px;
 }
 
-.btn {
+.boutonGeneral {
   border-radius: 2rem;
   border: 0;
   color: white;
   padding: 1rem;
   background-image: radial-gradient(ellipse farthest-corner at 20px 0, #FF79DA 0%, #9356DC 100%);
+  width: 200px;
+  box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.13);
 }
 
 .fonction {
-  width: 100%;
+  padding: 0 1rem;
 }
 .fonction .fonction__titre {
   text-align: start;
-  padding: 3.5rem 0 2rem 0;
+  padding: 1.5rem 0 2rem 0;
   grid-column-start: 2;
 }
 .fonction .fonction__step {
@@ -103,6 +107,7 @@ h3 {
   margin: 0 0 25px 0;
   padding: 1.8rem 0 1.3rem 0;
   width: 100%;
+  box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.13);
 }
 .fonction .fonction__step__number {
   color: #fff;
@@ -110,7 +115,7 @@ h3 {
   border: 1px solid #9356dc;
   border-radius: 50%;
   padding: 4px 8px 4px 8px;
-  margin: 0 1.5rem 0 14px;
+  margin: 0 1.5rem 0 -11px;
 }
 .fonction .fonction__step__icone {
   grid-column-start: 2;
@@ -128,13 +133,15 @@ h3 {
   display: grid;
   background: #f6f6f6;
 }
+.restaurant .restaurant__blocTitre {
+  margin-left: 1rem;
+}
 .restaurant .restaurant__bloc {
   margin: 0 20px 0 20px;
 }
 .restaurant .restaurant__menu {
   position: relative;
   background-color: #fff;
-  width: 100%;
   height: 250px;
   border-radius: 1.5rem;
   -webkit-box-shadow: 3px 8px 8px #dedada;
@@ -184,6 +191,32 @@ h3 {
   font-size: 27px;
 }
 
+@media screen and (min-width: 768px) {
+  .fonctionBloc {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-bottom: 20px;
+  }
+  .fonctionBloc .fonction__step {
+    width: 93%;
+    padding-left: 11px;
+  }
+}
+@media screen and (min-width: 900px) {
+  .restaurant__bloc {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-left: 10px;
+  }
+
+  .restaurant__menu {
+    width: 96%;
+  }
+}
+h2 {
+  font-family: shrikhand, sans-serif;
+}
+
 .imageHaute {
   grid-column-start: 2;
   width: 100%;
@@ -193,17 +226,37 @@ h3 {
 
 .sectionMenu {
   background-color: #f6f6f6;
+  border-top-left-radius: 40px 40px;
+  border-top-right-radius: 40px 40px;
+  transform: translateY(-11px);
 }
 
 .titre__restaurant {
   position: relative;
   border-radius: 1.5rem 1.5rem 0 0;
-  padding: 2.4rem 0 0 1.5rem;
+  padding: 0.4rem 0 0 1.5rem;
   margin-top: -2rem;
+}
+.titre__restaurant .titre__blocCoeur {
+  margin-top: -51px;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 22px;
+  margin-bottom: -30px;
+  margin-top: -51px;
+}
+.titre__restaurant .titre__blocCoeur .titre__coeurBlanc {
+  font-size: 27px;
+}
+.titre__restaurant .titre__blocCoeur .titre__coeurRose {
+  margin-left: -27px;
+  color: transparent;
+  font-size: 27px;
 }
 
 .menu {
   grid-column-start: 2;
+  margin: 0px 20px 0 20px;
 }
 .menu .menu__titre {
   padding: 3rem 0 0.5rem;
@@ -212,12 +265,12 @@ h3 {
 .menu .menu__ligneTitre {
   width: 2.5rem;
   border-top: 3px solid #99e2d0;
-  margin: 0.5rem 0 0 0;
+  margin: -1rem 0 0 0;
 }
 .menu .menu__descision {
   position: relative;
   background-color: #fff;
-  height: 70px;
+  height: 48px;
   padding: 0 0 15px 0;
   margin: 1rem 0 12px 0;
   cursor: pointer;
@@ -227,6 +280,43 @@ h3 {
   border-radius: 1.5rem;
   box-shadow: 3px 3px 10px #dedada;
   grid-column-start: 2;
+}
+.menu .menu__descision .menu__description {
+  margin-top: -10px;
+}
+.menu .menu__descision .menu__textGras {
+  margin-left: 13px;
+}
+.menu .menu__descision .menu__textNormal {
+  margin-top: -19px;
+  margin-left: 13px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.menu .menu__descision .menu__prix {
+  margin-top: -35px;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 22px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.boutonCommander {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 29px;
+  margin-top: 33px;
+}
+
+@media screen and (min-width: 900px) {
+  .menuBloc {
+    display: flex;
+  }
+
+  .menu {
+    width: 29%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
