--- a/sass/Components/footer.scss
+++ b/sass/Components/footer.scss
@@ -3,11 +3,13 @@
     background-color:$color__footer;
     color: white;
     padding: 10px;
+    margin-top: -10px;
     .footer_container
     {
         display: flex;
         flex-direction: column;
-        padding: 1rem;   
+        padding: 1rem;
+        margin-top: -25px;   
         .footer_titre
         {
             filter: invert(100%);
