--- a/sass/Components/mainmenu.scss
+++ b/sass/Components/mainmenu.scss
@@ -95,6 +95,15 @@ h2
             overflow: hidden;
             white-space: nowrap;
         }
+        .menu__icone
+        {
+            margin-top: -35px;
+            display: flex;
+            justify-content: flex-end;
+            margin-right: 22px;
+            overflow: hidden;
+            white-space: nowrap;
+        }
     }
 }
 .boutonCommander
