--- a/public/css/style.css
+++ b/public/css/style.css
@@ -292,6 +292,8 @@ h2 {
   margin-left: 13px;
   overflow: hidden;
   white-space: nowrap;
+  text-overflow: ellipsis;
+  margin-right: 60px;
 }
 .menu .menu__descision .menu__prix {
   margin-top: -35px;
